--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "reliese/laravel": "^0.0.19"
     },
     "config": {
         "optimize-autoloader": true,
